Completed the basic HTML - time to start styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,13 @@
     width: 100px;
     height: 100px;
 }
+
+table {
+    border: 1px solid black;
+    border-spacing: 3px;
+}
+
+td {
+    padding: 3px;
+    border: 1px solid black;
+}
